--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site settings
 title: My Portfolio
-email: kim.rick@gmail.com
-description: "Rick Kim's Portfolio"
+email: me@justinwuetcher.com
+description: "Justin Wuetcher's Portfolio"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: fed136
-  secondary: fec503 
+  secondary: fec503
   secondary-dark: 000
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: linkedin
-    url: https://www.linkedin.com/pub/rick-kim/30/aa7/a70
+    url: https://www.linkedin.com/in/justinwuetcher
   - title: github
-    url: http://github.com/y7kim
+    url: http://github.com/jwuetcher
   - title: envelope
-    url: mailto:kim.rick@gmail.com
+    url: mailto:me@justinwuetcher.com
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Waterloo St.
-  - line: Kitchener, ON N2H3V5
+  - line: W. North St.
+  - line: Baltimore, MD 21218
 
 # Build settings
 markdown: kramdown
